--- a/src/admin/templates/http/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/http/etc/qserv-czar.cnf.jinja
@@ -1,6 +1,5 @@
 [frontend]
 
-xrootd={{ xrootd_manager }}:1094
 
 #[mgmtdb]
 #db=qservMeta
@@ -55,9 +54,9 @@ port = {{ czar_db_port }}
 
 [tuning]
 largeResultConcurrentMerges = 6
-# xrootdCBThreadsInit must be less than xrootdCBThreadsMax
-xrootdCBThreadsMax = 500
-xrootdCBThreadsInit = 50
+# &&& xrootdCBThreadsInit must be less than xrootdCBThreadsMax
+# &&& xrootdCBThreadsMax = 500
+# &&& xrootdCBThreadsInit = 50
 
 # INSTRUCTIONS:
 #
@@ -74,7 +73,7 @@ xrootdCBThreadsInit = 50
 #
 #   The value set below has been tested to work for 80 simultaneous "shared scan" queries
 #   of 150,000 chunks each.
-xrootdSpread = 0
+# &&& xrootdSpread = 0
 
 # Seconds between updates the czar sends to qmeta for completed chunks.
 # This is per user query and important milestones ignore this limit.
