Removed dead code.

--- a/src/admin/templates/worker-svc/etc/worker-svc.cf.jinja
+++ b/src/admin/templates/worker-svc/etc/worker-svc.cf.jinja
@@ -1,4 +1,4 @@
-# Qserv xrdssi plugin configuration file
+# Qserv worker configuration file
 # Default values for parameters are commented
 
 [mysql]
