Extended Qserv metadata schema
Two changes in this commit:
- Added a qew query status FAILED_RL to indicate queries failed
  due to exceeding the large result limit
- Extended information schema to report errors on failed queries

Extended Qserv information schema to report errors on failed queries(1)

--- a/src/qmeta/schema/migrate-None-to-11.sql.jinja
+++ b/src/qmeta/schema/migrate-None-to-11.sql.jinja
@@ -41,7 +41,7 @@ CREATE TABLE IF NOT EXISTS `QInfo` (
   `query` MEDIUMTEXT NOT NULL COMMENT 'Original query text as was submitted by client.',
   `qTemplate` MEDIUMTEXT NOT NULL COMMENT 'Query template, string used to build final per-chunk query.',
   `qMerge` MEDIUMTEXT NULL COMMENT 'Merge (or aggregate) query to be executed on results table, result of this query is stored in merge table. If NULL then it is equivalent to SELECT *.',
-  `status` ENUM('EXECUTING', 'COMPLETED', 'FAILED', 'ABORTED') NOT NULL DEFAULT 'EXECUTING' COMMENT 'Status of query processing.',
+  `status` ENUM('EXECUTING', 'COMPLETED', 'FAILED', 'FAILED_LR', 'ABORTED') NOT NULL DEFAULT 'EXECUTING' COMMENT 'Status of query processing.',
   `submitted` TIMESTAMP NOT NULL DEFAULT  CURRENT_TIMESTAMP COMMENT 'Time when query was submitted (received from client)',
   `completed` TIMESTAMP NULL COMMENT 'Time when query processing is completed - either the results were collected into czar-side result table or failure is detected.',
   `returned` TIMESTAMP NULL COMMENT 'Time when result is sent back to user. NULL if not completed yet.',
@@ -139,42 +139,6 @@ CREATE OR REPLACE
     JOIN `QCzar` AS `qc` ON `qi`.`czarId`=`qc`.`czarId`
     WHERE `qi`.`status` = 'EXECUTING';
 
--- ------------------------------------------------------------------------------------
--- View `InfoSchemaQueries`
--- This shows full Qmeta info suitable for "SELECT ... FROM INFORMATION_SCHEMA.QUERIES"
--- ------------------------------------------------------------------------------------
-CREATE OR REPLACE
-  SQL SECURITY INVOKER
-  VIEW `InfoSchemaQueries` AS
-  SELECT `qi`.`queryId` `ID`,
-         `qi`.`qType` `TYPE`,
-         `qc`.`czar` `CZAR`,
-         `qc`.`czarId` `CZAR_ID`,
-         `qi`.`status` `STATUS`,
-         `qi`.`submitted` `SUBMITTED`,
-         `qi`.`completed` `COMPLETED`,
-         `qi`.`returned` `RETURNED`,
-         `qi`.`chunkCount` `CHUNKS`,
-         `qi`.`collectedBytes` `BYTES`,
-         `qi`.`collectedRows` `ROWS_COLLECTED`,
-         `qi`.`finalRows` `ROWS`,
-         GROUP_CONCAT(DISTINCT `qt`.`dbName`) `DBS`,
-         `qi`.`query` `QUERY`
-    FROM `QInfo` AS `qi`
-    JOIN `QCzar` AS `qc` ON `qi`.`czarId`=`qc`.`czarId`
-    LEFT OUTER JOIN `QTable` AS `qt` ON `qi`.`queryId`=`qt`.`queryId`
-    GROUP BY `qi`.`queryId`;
-
--- -----------------------------------------------------
--- Table `QMetadata`
--- -----------------------------------------------------
-CREATE TABLE IF NOT EXISTS `QMetadata` (
-  `metakey` CHAR(64) NOT NULL COMMENT 'Key string',
-  `value` TEXT NULL COMMENT 'Key string',
-  PRIMARY KEY (`metakey`))
-ENGINE = InnoDB
-COMMENT = 'Metadata about database as a whole, bunch of key-value pairs';
-
 -- -----------------------------------------------------
 -- Table `QMessages`
 -- -----------------------------------------------------
@@ -195,6 +159,44 @@ CREATE TABLE IF NOT EXISTS `QMessages` (
 ENGINE = InnoDB
 COMMENT = 'Table of messages generated during queries.';
 
+-- ------------------------------------------------------------------------------------
+-- View `InfoSchemaQueries`
+-- This shows full Qmeta info suitable for "SELECT ... FROM INFORMATION_SCHEMA.QUERIES"
+-- ------------------------------------------------------------------------------------
+CREATE OR REPLACE
+  SQL SECURITY INVOKER
+  VIEW `InfoSchemaQueries` AS
+  SELECT `qi`.`queryId` `ID`,
+         `qi`.`qType` `TYPE`,
+         `qc`.`czar` `CZAR`,
+         `qc`.`czarId` `CZAR_ID`,
+         `qi`.`status` `STATUS`,
+         `qi`.`submitted` `SUBMITTED`,
+         `qi`.`completed` `COMPLETED`,
+         `qi`.`returned` `RETURNED`,
+         `qi`.`chunkCount` `CHUNKS`,
+         `qi`.`collectedBytes` `BYTES`,
+         `qi`.`collectedRows` `ROWS_COLLECTED`,
+         `qi`.`finalRows` `ROWS`,
+         GROUP_CONCAT(DISTINCT `qt`.`dbName`) `DBS`,
+         `qi`.`query` `QUERY`,
+         TRIM(BOTH ',' FROM GROUP_CONCAT(IF(`qm`.`severity`='ERROR',`qm`.`message`,''))) `ERROR`
+    FROM `QInfo` AS `qi`
+    JOIN `QCzar` AS `qc` ON `qi`.`czarId`=`qc`.`czarId`
+    LEFT OUTER JOIN `QTable` AS `qt` ON `qi`.`queryId`=`qt`.`queryId`
+    LEFT OUTER JOIN `QMessages` AS `qm` ON `qi`.`queryId`=`qm`.`queryId`
+    GROUP BY `qi`.`queryId`;
+
+-- -----------------------------------------------------
+-- Table `QMetadata`
+-- -----------------------------------------------------
+CREATE TABLE IF NOT EXISTS `QMetadata` (
+  `metakey` CHAR(64) NOT NULL COMMENT 'Key string',
+  `value` TEXT NULL COMMENT 'Key string',
+  PRIMARY KEY (`metakey`))
+ENGINE = InnoDB
+COMMENT = 'Metadata about database as a whole, bunch of key-value pairs';
+
 -- Update version on every schema change.
 -- Version 0 corresponds to initial QMeta release and it had no
 -- QMetadata table at all.
@@ -208,4 +210,5 @@ COMMENT = 'Table of messages generated during queries.';
 -- Version 8 replaced INT with BIGINT in the byte and row counter columns of QInfo.
 -- Version 9 removed the full-text index on the query text from QInfo.
 -- Version 10 redefined schema of the ProcessList tables.
-INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '10');
+-- Version 11 extended view InfoSchemaQueries to report errors on the faile queries. Added status option FAILED_LR to QInfo.status.
+INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '11');
