--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -9,7 +9,7 @@ socket = {{ db_socket }}
 
 # Username for mysql connections
 username = qsmaster
-password = CHANGEME2
+password = CHANGEME
 
 [scheduler]
 
@@ -62,8 +62,8 @@ maxActiveChunks_fast = 4
 # Maximum number of SQL connections for tasks
 maxsqlconn = 980
 # Number of SQL connections reserved for interactive queries or
-# queries that require multiple sql connections, such as near-neighbor. 
-# This value must be less than maxsqlconn. 
+# queries that require multiple sql connections, such as near-neighbor.
+# This value must be less than maxsqlconn.
 reservedinteractivesqlconn = 930
 
 [results]
